# save-game-uploader

./: package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.js
.github/: dependabot.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: location.json  location.json5
src-tauri/data/cracked/a/: data.json5
src-tauri/data/cracked/c/: data.json5
src-tauri/data/cracked/d/: data.json5
src-tauri/data/cracked/s/: data.json5
src-tauri/data/uncracked/a/: data.json5
src-tauri/src/: lib.rs  main.rs  save_games.rs  search.rs
src-tauri/src/commands/: find_games.rs  mod.rs
src-tauri/src/macros/: debug_println.rs  mod.rs
src-tauri/src/utils/: globs.rs  mod.rs  search.rs
src/lib/components/: app-sidebar.svelte
src/lib/components/ui/button/: index.ts
src/lib/stores/: games.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/(app)/: +layout.svelte
src/routes/home/: +layout.svelte  +page.svelte
src/routes/loading/: +page.svelte
