[package]
name = "save-game-uploader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.release.package."*"]
codegen-units = 1
opt-level = 's'
strip = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 's'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "save_game_uploader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2.0.0"
glob = "0.3.2"
json5 = "0.4.1"
windows = { version = "0.61.3", features = ["Win32_Storage_FileSystem"] }
tokio = { version = "1.46.0", features = ['full'] }
futures = "0.3"
cached = { version = "0.55.1", features = ["async"] }
